# finlab

./: LICENSE  README.md  pyproject.toml
api/: main.py  reset_collection.py
api/config/: prompts.py  settings.py
api/models/: rag.py  search.py
api/routers/: agent.py  rag.py  search.py
api/services/: agent.py  create_indexes.py  embeddings.py  rag.py  search.py
ingestion/: create-collection.py  ingestion.py  news_ingestion.py
ingestion/utils/: edgar_client.py  news_client.py  semantic_chuncker.py  simple_chunker.py  test-query.py
