[project]
name = "finlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "groq>=1.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "qdrant-client[fastembed]>=1.17.1",
    "trafilatura>=2.1.0",
    "transformers>=5.11.0",
    "uvicorn>=0.44.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
